--- a/.github/workflows/release-please-reusable.yml
+++ b/.github/workflows/release-please-reusable.yml
@@ -20,10 +20,11 @@ jobs:
         package: ${{ fromJson(inputs.packages) }}
     steps:
       - uses: actions/checkout@v4
-      
-      - uses: google-github-actions/release-please-action@v4
         with:
-          path: ${{ matrix.package.path }}
-          package-name: ${{ matrix.package.name }}
-          release-type: node
           token: ${{ secrets.token }}
+      
+      - uses: googleapis/release-please-action@v4
+        with:
+          token: ${{ secrets.token }}
+          release-type: simple
+          path: ${{ matrix.package.path }}
