--- a/.github/workflows/oases-release-please.yaml
+++ b/.github/workflows/oases-release-please.yaml
@@ -13,7 +13,7 @@ jobs:
       releases_created: ${{ steps.release.outputs.releases_created }}
       paths_released: ${{ steps.release.outputs.paths_released }}
     steps:
-      - uses: arieluchka-org-test/action_templates/releases/release-please-action@main
+      - uses: arieluchka-org-test/action_templates/releases/release-please-action@main-alt
         id: release
         with:
           token: ${{ secrets.token || secrets.GITHUB_TOKEN }}
